--- a/src/Header/headerstyle.css
+++ b/src/Header/headerstyle.css
@@ -25,9 +25,8 @@ body {
   width: 100vw;
   max-width: 430px;
   height: 100vh;
-  background: url("../assets/bg_foto.JPG") center/cover no-repeat;
+  background: url("../assets/fotohome.JPG") center/cover no-repeat;
   display: flex;
-  align-items: flex-end;
 }
 
 .wedding-header .overlay {
@@ -37,30 +36,48 @@ body {
 }
 
 .header-content {
-  position: relative;
-  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
+  box-sizing: border-box;
+  max-width: 430px;
+  padding: 0 30px;
+  text-align: center;
+}
+
+.header-top {
   text-align: center;
   color: white;
-  padding: 0 30px;
-  max-width: 430px;
-  margin: 0 auto;
-  margin-bottom: 100px;
+  z-index: 1;
+}
+
+.header-bottom {
+  text-align: center;
+  margin-bottom: 30px;
+  z-index: 1;
 }
 
 .subtitle {
-  font-size: 2.1rem;
-  font-family: "Tangerine", cursive;
+  font-size: 1.5rem;
+  font-family: "Cormorant Garamond", serif;
   margin: 0;
+  font-weight: 400;
 }
 
 .title {
-  font-size: 2.3rem;
-  font-weight: bold;
+  font-size: 3.5rem;
   font-family: "Cinzel Decorative", serif;
   font-weight: 600;
-  font-style: normal;
   margin: 0;
   margin-bottom: 20px;
+  line-height: 0.9;
+  margin-top: 10px;
+}
+
+.logo {
+  width: 126px;
+  height: 188px;
 }
 
 .greeting {
