--- a/src/Header/headerstyle.css
+++ b/src/Header/headerstyle.css
@@ -32,7 +32,7 @@ body {
 .wedding-header .overlay {
   position: absolute;
   inset: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .header-content {
@@ -48,7 +48,6 @@ body {
 
 .header-top {
   text-align: center;
-  color: white;
   z-index: 1;
 }
 
@@ -63,6 +62,7 @@ body {
   font-family: "Cormorant Garamond", serif;
   margin: 0;
   font-weight: 400;
+  color: white;
 }
 
 .title {
@@ -73,6 +73,7 @@ body {
   margin-bottom: 20px;
   line-height: 0.9;
   margin-top: 10px;
+  color: #feb902;
 }
 
 .logo {
