--- a/src/Brides/brides.module.css
+++ b/src/Brides/brides.module.css
@@ -31,8 +31,9 @@ body {
   position: relative;
   width: 100vw;
   max-width: 430px;
-  height: 140vh;
+  height: fit-content;
   display: flex;
+  padding-bottom: 30px;
   flex-direction: column;
   transform-origin: bottom center; /* zoom from bottom */
 }
@@ -63,6 +64,7 @@ body {
   justify-content: center;
   display: flex;
   flex-direction: column;
+  margin-bottom: 50px;
 }
 
 .name {
