--- a/src/QR/qr.module.css
+++ b/src/QR/qr.module.css
@@ -25,7 +25,7 @@ body {
   width: 100vw;
   max-width: 430px;
   height: auto; /* let height adapt to content */
-  background: url("../assets/bg_qr.JPG") center/cover no-repeat; /* replace with your QR background if needed */
+  background: url("../assets/drapery.jpeg") center/cover no-repeat; /* replace with your QR background if needed */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -49,12 +49,14 @@ body {
 }
 
 .doatitle {
-  font-size: 1.5rem;
+  font-size: 2.5rem;
   font-weight: bold;
-  font-family: "Cinzel Decorative", serif;
+  font-family: "Bodoni Moda", serif;
   font-style: normal;
   margin: 0;
   margin-bottom: 20px;
+  font-weight: 600;
+  color: #feb902;
 }
 
 .qr_code {
