--- a/src/GaleryComponent/galerystyle.module.css
+++ b/src/GaleryComponent/galerystyle.module.css
@@ -112,10 +112,19 @@
   color: #feb902;
 }
 
-/* Responsive */
-@media (max-width: 350px) {
+@media (max-width: 401px) {
   .galerycontainer {
     grid-template-columns: repeat(auto-fill, minmax(90px, 1fr));
     gap: 8px;
+    max-width: 401px;
+    width: 100vw;
   }
+
+  .title {
+    font-size: 2.5rem;
+  }
+}
+
+/* HP sedang: 402px sampai 429px */
+@media (min-width: 402px) and (max-width: 429px) {
 }
