--- a/src/Brides/brides.module.css
+++ b/src/Brides/brides.module.css
@@ -50,12 +50,8 @@ body {
   border-radius: 20px;
   text-align: right;
   z-index: 2;
-  align-self: end;
   margin-bottom: 20px;
-  margin-left: 20px; /* Push to bottom of the grid area */
-  background: rgba(255, 255, 255, 0.3); /* translucent */
-  backdrop-filter: blur(2px); /* actual blur */
-  -webkit-backdrop-filter: blur(10px);
+  padding: 0;
 }
 
 .imagewrapper img {
@@ -81,7 +77,7 @@ body {
 .fullname {
   z-index: 2;
   color: black;
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-family: "Cormorant Garamond", serif;
   font-weight: 600;
   font-style: bold;
@@ -93,7 +89,7 @@ body {
 .desc {
   z-index: 2;
   color: black;
-  font-size: 1.1rem;
+  font-size: 0.9rem;
   font-family: "Cormorant Garamond", serif;
   font-weight: 700;
   font-style: normal;
@@ -104,7 +100,7 @@ body {
 .parent {
   z-index: 2;
   color: black;
-  font-size: 1.1rem;
+  font-size: 0.9rem;
   font-family: "Cormorant Garamond", serif;
   font-weight: 700;
   font-style: normal;
