--- a/src/Doa/doastyle.module.css
+++ b/src/Doa/doastyle.module.css
@@ -22,7 +22,6 @@ body {
 
 .header {
   position: relative;
-  width: 100vw;
   max-width: 430px;
   height: fit-content;
   display: flex;
@@ -30,10 +29,23 @@ body {
 
 .image {
   width: 100vw;
+  height: 35vh;
   max-width: 430px;
-  height: fit-content;
-  max-height: 490px;
-  margin-top: auto; /* pushes the image to the bottom */
+  max-height: 35vh;
+  height: auto; /* keep ratio */
+  object-fit: cover; /* zoom & crop */
+  object-position: center;
+}
+
+.images {
+  width: 100vw;
+  max-width: 430px;
+  max-height: 35vh;
+  height: 35vh;
+  height: auto; /* keep ratio */
+  object-fit: cover; /* zoom & crop */
+  object-position: center;
+  margin-top: auto;
 }
 
 .overlaydoa {
@@ -47,10 +59,13 @@ body {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  margin-left: 20px;
-  margin-right: 20px;
   justify-content: center;
-  height: 40vh;
+}
+
+.textContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .doacontent {
@@ -59,7 +74,7 @@ body {
   color: white;
   max-width: 430px;
   display: flex;
-  max-height: 140vh;
+  max-height: fit-content;
   flex-direction: column;
   overflow: hidden;
 }
@@ -71,15 +86,17 @@ body {
   font-weight: 600;
   font-style: normal;
   margin: 0;
+  margin-bottom: 40px;
 }
 
 .doatext {
   font-size: 1rem;
   font-family: "Cormorant Garamond", serif;
   margin: 0;
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-bottom: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  margin-top: 40px;
 }
 
 /* HP kecil: sampai 401px */
@@ -87,17 +104,20 @@ body {
   /* CSS khusus HP kecil */
 
   .doatitle {
-    font-size: 1.4rem;
+    font-size: 1.2rem;
   }
 
   .doatext {
-    font-size: 1rem;
+    font-size: 0.8rem;
   }
 }
 
 /* HP sedang: 402px sampai 429px */
 @media (min-width: 402px) and (max-width: 429px) {
-  /* CSS khusus HP sedang */
+  .image {
+    width: 100vw;
+    max-width: 429px;
+  }
 }
 
 /* HP besar dan ke atas: 430px atau lebih */
