--- a/src/Grooms/grooms.module.css
+++ b/src/Grooms/grooms.module.css
@@ -49,12 +49,8 @@ body {
   border-radius: 20px;
   text-align: left;
   z-index: 2;
-  align-self: end;
   margin-bottom: 20px;
-  width: 400px;
-  background: rgba(255, 255, 255, 0.3); /* translucent */
-  backdrop-filter: blur(2px); /* actual blur */
-  -webkit-backdrop-filter: blur(10px);
+  padding: 0;
 }
 
 .imagewrapper img {
@@ -80,7 +76,7 @@ body {
 .fullname {
   z-index: 2;
   color: black;
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-family: "Cormorant Garamond", serif;
   font-weight: 600;
   font-style: bold;
@@ -92,7 +88,7 @@ body {
 .desc {
   z-index: 2;
   color: black;
-  font-size: 1.1rem;
+  font-size: 0.9rem;
   font-family: "Cormorant Garamond", serif;
   font-weight: 700;
   font-style: normal;
@@ -103,7 +99,7 @@ body {
 .parent {
   z-index: 2;
   color: black;
-  font-size: 1.1rem;
+  font-size: 0.9rem;
   font-family: "Cormorant Garamond", serif;
   font-weight: 700;
   font-style: normal;
