--- a/src/TimePage/timepage.module.css
+++ b/src/TimePage/timepage.module.css
@@ -34,7 +34,7 @@
 }
 
 .doatext {
-  font-size: 1rem;
+  font-size: 1.5rem;
   font-family: "Cormorant Garamond", serif;
   margin: 0 0 20px;
 }
@@ -69,15 +69,20 @@
 
 /* Button */
 .download_button {
-  display: inline-block;
-  margin-top: 20px;
-  padding: 10px 20px;
-  background-color: #fff;
-  color: #000;
-  border-radius: 8px;
-  font-weight: bold;
+  display: inline-flex;
+  margin-bottom: 10px;
+  align-items: center;
+  gap: 8px;
+  padding: 2px 6px;
+  border-radius: 100px;
+  border: 1px solid #ddd;
+  background-color: white;
+  color: #333;
+  font-weight: 600;
   text-decoration: none;
-  transition: background-color 0.3s ease, color 0.3s ease;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  transition: all 0.2s ease-in-out;
+  font-family: "Cormorant Garamond", serif;
 }
 
 .download_button:hover {
