--- a/src/Brides/brides.module.css
+++ b/src/Brides/brides.module.css
@@ -173,7 +173,7 @@ body {
 .image {
   z-index: 0;
   max-width: 430px;
-  width: 100vw;
+  width: 70vw;
   height: fit-content;
   filter: brightness(1.05) contrast(1.05); /* small boost */
   display: block;
@@ -184,7 +184,8 @@ body {
   text-align: center;
   font-size: 3rem;
   z-index: 1;
-  color: #feb902;
+  color: white;
+  font-style: italic;
   margin-top: 30px;
   margin-bottom: 30px;
 }
@@ -264,6 +265,17 @@ body {
   .sunOverlay {
     max-width: 401px;
     width: 100vw;
+  }
+
+  .bridescontent {
+    grid-area: 1 / 1;
+    padding: 20px;
+    border-radius: 20px;
+    text-align: left;
+    z-index: 2;
+    position: absolute;
+    bottom: 20px;
+    left: 10px;
   }
 }
 
