--- a/src/Countdown/countdown.module.css
+++ b/src/Countdown/countdown.module.css
@@ -41,7 +41,7 @@ body {
 .overlaydoa {
   position: absolute;
   inset: 0;
-  background: url("../assets/whitedrapery.jpeg") center/cover no-repeat;
+  background: url("../assets/drapery.jpeg") center/cover no-repeat;
 }
 
 .topcontent {
@@ -58,7 +58,7 @@ body {
 .doacontent {
   position: relative;
   z-index: 1;
-  color: black;
+  color: white;
   max-width: 430px;
   display: flex;
   max-height: fit-content;
@@ -77,7 +77,7 @@ body {
 }
 
 .doatext {
-  font-size: 1.2rem;
+  font-size: 0.9rem;
   font-family: "Cormorant Garamond", serif;
   margin: 0;
   margin-bottom: 20px;
