--- a/src/Grooms/grooms.module.css
+++ b/src/Grooms/grooms.module.css
@@ -68,6 +68,17 @@ body {
   color: #feb902;
 }
 
+[data-aos] {
+  opacity: 0;
+  transform: translateY(50px);
+  transition: opacity 0.6s, transform 0.6s;
+}
+
+[data-aos].aos-animate {
+  opacity: 1;
+  transform: translateY(0);
+}
+
 .imagewrapper img {
   width: 100%;
   height: auto;
