--- a/src/Brides/brides.module.css
+++ b/src/Brides/brides.module.css
@@ -246,6 +246,17 @@ body {
   line-height: 1;
 }
 
+[data-aos] {
+  opacity: 0;
+  transform: translateY(50px);
+  transition: opacity 0.6s, transform 0.6s;
+}
+
+[data-aos].aos-animate {
+  opacity: 1;
+  transform: translateY(0);
+}
+
 /* HP kecil: sampai 401px */
 @media (max-width: 401px) {
   .title {
