--- a/src/Gift/gift.module.css
+++ b/src/Gift/gift.module.css
@@ -110,6 +110,17 @@ body {
   margin-top: 20px;
 }
 
+[data-aos] {
+  opacity: 0;
+  transform: translateY(50px);
+  transition: opacity 0.6s, transform 0.6s;
+}
+
+[data-aos].aos-animate {
+  opacity: 1;
+  transform: translateY(0);
+}
+
 /* HP kecil: sampai 401px */
 @media (max-width: 401px) {
   /* CSS khusus HP kecil */
