--- a/src/Countdown/countdown.module.css
+++ b/src/Countdown/countdown.module.css
@@ -91,6 +91,17 @@ body {
   z-index: 2;
 }
 
+[data-aos] {
+  opacity: 0;
+  transform: translateY(50px);
+  transition: opacity 0.6s, transform 0.6s;
+}
+
+[data-aos].aos-animate {
+  opacity: 1;
+  transform: translateY(0);
+}
+
 /* HP kecil: sampai 401px */
 @media (max-width: 401px) {
   /* CSS khusus HP kecil */
