--- a/src/GaleryComponent/galerystyle.module.css
+++ b/src/GaleryComponent/galerystyle.module.css
@@ -112,6 +112,17 @@
   color: #feb902;
 }
 
+[data-aos] {
+  opacity: 0;
+  transform: translateY(50px);
+  transition: opacity 0.6s, transform 0.6s;
+}
+
+[data-aos].aos-animate {
+  opacity: 1;
+  transform: translateY(0);
+}
+
 @media (max-width: 401px) {
   .galerycontainer {
     grid-template-columns: repeat(auto-fill, minmax(90px, 1fr));
