--- a/src/Wishes/wishes.module.css
+++ b/src/Wishes/wishes.module.css
@@ -68,3 +68,14 @@
   font-family: "Cormorant Garamond", serif;
   font-weight: 900;
 }
+
+[data-aos] {
+  opacity: 0;
+  transform: translateY(50px);
+  transition: opacity 0.6s, transform 0.6s;
+}
+
+[data-aos].aos-animate {
+  opacity: 1;
+  transform: translateY(0);
+}
