--- a/src/GaleryComponent/galerystyle.module.css
+++ b/src/GaleryComponent/galerystyle.module.css
@@ -5,7 +5,7 @@
   max-width: 430px;
   margin: 0 auto;
   padding: 20px 10px;
-  background: url("../assets/draperybrides.jpeg") center/cover no-repeat;
+  background: url("../assets/draperybrides.png") center/cover no-repeat;
 }
 
 .galleryItem {
