--- a/src/Brides/brides.module.css
+++ b/src/Brides/brides.module.css
@@ -288,6 +288,10 @@ body {
     bottom: 20px;
     left: 10px;
   }
+
+  .desc {
+    font-size: 0.6rem !important;
+  }
 }
 
 /* HP sedang: 402px sampai 429px */
@@ -296,6 +300,10 @@ body {
     z-index: 0;
     max-width: 429px;
     width: 100vw;
+  }
+
+  .desc {
+    font-size: 0.6rem !important;
   }
   /* CSS khusus HP sedang */
 }
