--- a/src/Story/timeline.module.css
+++ b/src/Story/timeline.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   padding-top: 30px;
-  padding-left: 16px;
+  padding-left: 8px;
   padding-right: 16px;
   padding-bottom: 30px;
   max-width: 430px;
@@ -93,12 +93,25 @@
   font-family: "Cinzel Decorative", serif;
 }
 
+.image {
+  width: 150px;
+  height: fit-content;
+  border-radius: 20px;
+}
+
+.photo {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 15px;
+}
+
 .box {
   background-color: #f5f5f5;
   padding: 12px;
   border-radius: 20px;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.05);
-  font-size: 14px;
+  font-size: 0.7rem;
   line-height: 1.5;
   color: white;
   font-family: "Cormorant Garamond", serif;
@@ -108,4 +121,5 @@
     rgba(255, 140, 0, 0.5),
     /* dark orange */ rgba(0, 0, 0, 0.2) /* black overlay */
   );
+  width: 380px; /* or any value you want */
 }
