--- a/src/Gift/gift.module.css
+++ b/src/Gift/gift.module.css
@@ -94,23 +94,27 @@ body {
   border-radius: 20px;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.05);
   font-size: 14px;
-  padding: 12px;
   color: white;
   font-family: "Cormorant Garamond", serif;
   font-weight: bold;
   background: linear-gradient(
     to right,
     rgba(255, 140, 0, 0.5),
-    /* dark orange */ rgba(0, 0, 0, 0.2) /* black overlay */
+    rgba(0, 0, 0, 0.2)
   );
-  width: 70vw;
+  width: 380px;
   margin-top: 20px;
+  gap: 0;
+  /* this part is missing */
+  display: flex;
+  flex-direction: column; /* stack vertically */
   justify-content: center;
   align-items: center;
 }
 
 .box p {
   font-size: 1.5rem;
+  margin: 0;
 }
 
 [data-aos] {
@@ -173,11 +177,18 @@ body {
   .doatext {
     font-size: 0.8rem;
   }
+
+  .box {
+    width: 350px;
+  }
 }
 
 /* HP sedang: 402px sampai 429px */
 @media (min-width: 402px) and (max-width: 429px) {
   /* CSS khusus HP sedang */
+  .box {
+    width: 350px;
+  }
 }
 
 /* HP besar dan ke atas: 430px atau lebih */
