--- a/src/DateTime/datetime.module.css
+++ b/src/DateTime/datetime.module.css
@@ -361,3 +361,23 @@ body {
 /* HP besar dan ke atas: 430px atau lebih */
 @media (min-width: 430px) {
 }
+
+@media (max-height: 700px) {
+  .boxVenue {
+    margin-top: 50px;
+  }
+}
+
+@media (max-height: 464px) {
+  .boxVenue {
+    margin-top: 20px;
+  }
+
+  .acaraTitle {
+    font-size: 1.5rem;
+  }
+
+  .acaraDetail {
+    font-size: 1rem;
+  }
+}
