--- a/src/Wishes/wishes.module.css
+++ b/src/Wishes/wishes.module.css
@@ -55,12 +55,14 @@
   font-weight: bold;
   margin: 0;
   font-family: "Cormorant Garamond", serif;
+  color: white;
 }
 
 .time_wish {
   font-size: 0.5rem;
   color: #666;
   margin: 0;
+  color: white;
 }
 
 .wish {
