--- a/src/Story/timeline.module.css
+++ b/src/Story/timeline.module.css
@@ -9,7 +9,7 @@
   width: 100vw;
   margin: 0 auto;
   height: fit-content;
-  background: url("../assets/bgphoto.png") center/cover no-repeat; /* replace with your QR background if needed */
+  background: url("../assets/bgphotochange.png") center/cover no-repeat; /* replace with your QR background if needed */
 }
 
 .item {
@@ -96,9 +96,9 @@
 }
 
 .image {
-  width: 150px;
+  width: 135px;
   height: fit-content;
-  max-height: 150px;
+  max-height: 135px;
   border-radius: 20px;
 }
 
