--- a/src/Grooms/grooms.module.css
+++ b/src/Grooms/grooms.module.css
@@ -118,7 +118,7 @@ body {
   font-size: 0.7rem;
   font-family: "Lato", sans-serif;
   font-weight: 400;
-  font-style: normal;
+  font-style: italic;
   margin: 0;
   margin-top: 10px;
   line-height: 1;
