--- a/src/Doa/doastyle.module.css
+++ b/src/Doa/doastyle.module.css
@@ -23,6 +23,7 @@ body {
 .header {
   position: relative;
   max-width: 430px;
+  width: 100vw;
   height: fit-content;
   display: flex;
 }
@@ -62,6 +63,8 @@ body {
   justify-content: center;
   margin-left: 10px;
   margin-right: 10px;
+  width: 100vw;
+  max-width: 430px;
 }
 
 .textContainer {
@@ -81,6 +84,8 @@ body {
   max-height: fit-content;
   flex-direction: column;
   overflow: hidden;
+  width: 100vw;
+  max-width: 430px;
 }
 
 .doatitle {
@@ -94,13 +99,14 @@ body {
 }
 
 .doatext {
-  font-size: 1rem;
+  font-size: 10rem;
   font-family: "Cormorant Garamond", serif;
   margin: 0;
   margin-left: 10px;
   margin-right: 10px;
   margin-bottom: 10px;
   margin-top: 40px;
+  width: 380px;
 }
 
 /* HP kecil: sampai 401px */
@@ -114,9 +120,35 @@ body {
   }
 
   .doatext {
-    font-size: 0.8rem;
+    font-size: 1rem;
     margin-left: 30px;
     margin-right: 30px;
+    width: 350px;
+  }
+
+  .header {
+    max-width: 401px;
+  }
+}
+
+@media (max-width: 350px) {
+  /* CSS khusus HP kecil */
+
+  .doatitle {
+    font-size: 1.1rem;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  .doatext {
+    font-size: 1rem;
+    margin-left: 30px;
+    margin-right: 30px;
+    width: 300px;
+  }
+
+  .header {
+    max-width: 350px;
   }
 }
 
@@ -124,6 +156,10 @@ body {
 @media (min-width: 402px) and (max-width: 429px) {
   .image {
     width: 100vw;
+    max-width: 429px;
+  }
+
+  .header {
     max-width: 429px;
   }
 }
