--- a/src/DoaTwi/doastyletwo.module.css
+++ b/src/DoaTwi/doastyletwo.module.css
@@ -59,6 +59,8 @@ body {
   align-items: center;
   text-align: center;
   justify-content: center;
+  width: 100vw;
+  max-width: 430px;
 }
 
 .textContainer {
@@ -68,7 +70,10 @@ body {
   color: black; /* make text readable */
   text-align: center;
   z-index: 2;
-  width: 400px;
+  width: 100vw;
+  max-width: 430px;
+  align-items: center;
+  justify-content: center;
 }
 
 .doacontent {
@@ -96,8 +101,8 @@ body {
   font-size: 1rem;
   font-family: "Cormorant Garamond", serif;
   margin: 0;
-  margin-left: 18px;
-  margin-right: 18px;
+  margin-left: 30px;
+  margin-right: 30px;
   margin-bottom: 10px;
   margin-top: 40px;
 }
@@ -127,4 +132,19 @@ body {
 
 /* HP besar dan ke atas: 430px atau lebih */
 @media (min-width: 430px) {
+}
+
+/* HP kecil: sampai 401px */
+@media (max-width: 380px) {
+  /* CSS khusus HP kecil */
+
+  .doatitle {
+    font-size: 1.2rem;
+  }
+
+  .doatext {
+    font-size: 0.8rem;
+    margin-left: 30px;
+    margin-right: 30px;
+  }
 }
