--- a/src/ThankYou/headerstyle.css
+++ b/src/ThankYou/headerstyle.css
@@ -194,3 +194,23 @@ body {
 /* HP besar dan ke atas: 430px atau lebih */
 @media (min-width: 430px) {
 }
+
+@media (max-height: 700px) {
+  .subtitle {
+    font-size: 0.8rem;
+  }
+
+  .header-content {
+    width: 100vw;
+    max-width: 429px;
+  }
+
+  .logo {
+    width: 35px;
+    height: 51px;
+  }
+
+  .title {
+    font-size: 1rem;
+  }
+}
