--- a/src/DoaTwi/doastyletwo.module.css
+++ b/src/DoaTwi/doastyletwo.module.css
@@ -23,7 +23,7 @@ body {
 .header {
   position: relative;
   max-width: 430px;
-  height: fit-content;
+  max-height: 100vh;
   display: flex;
 }
 
@@ -104,7 +104,7 @@ body {
   margin-left: 30px;
   margin-right: 30px;
   margin-bottom: 10px;
-  margin-top: 40px;
+  margin-top: 80px;
 }
 
 /* HP kecil: sampai 401px */
@@ -120,6 +120,10 @@ body {
     margin-left: 30px;
     margin-right: 30px;
   }
+
+  .textContainer {
+    transform: translate(-50%, -76%);
+  }
 }
 
 /* HP sedang: 402px sampai 429px */
@@ -127,6 +131,10 @@ body {
   .image {
     width: 100vw;
     max-width: 429px;
+  }
+
+  .textContainer {
+    transform: translate(-50%, -76%);
   }
 }
 
@@ -146,5 +154,45 @@ body {
     font-size: 0.8rem;
     margin-left: 30px;
     margin-right: 30px;
+  }
+
+  .textContainer {
+    transform: translate(-50%, -90%);
+  }
+}
+
+@media (max-height: 500px) {
+  /* CSS khusus HP kecil */
+
+  .doatitle {
+    font-size: 1.2rem;
+  }
+
+  .doatext {
+    font-size: 0.8rem;
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+
+  .textContainer {
+    transform: translate(-50%, -80%);
+  }
+
+  @media (max-width: 350px) {
+    /* CSS khusus HP kecil */
+
+    .doatitle {
+      font-size: 1.2rem;
+    }
+
+    .doatext {
+      font-size: 0.8rem;
+      margin-left: 30px;
+      margin-right: 30px;
+    }
+
+    .textContainer {
+      transform: translate(-50%, -30%) !important;
+    }
   }
 }
