--- a/src/Brides/brides.module.css
+++ b/src/Brides/brides.module.css
@@ -40,7 +40,10 @@ body {
 
 .overlaybrides {
   position: absolute;
-  inset: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   background: url("../assets/draperybrides.png") center/cover no-repeat;
 }
 
@@ -231,7 +234,10 @@ body {
 /* the overlay filter */
 .sunOverlay {
   position: absolute;
-  inset: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   pointer-events: none;
   z-index: 1;
 }
