--- a/src/Gift/gift.module.css
+++ b/src/Gift/gift.module.css
@@ -40,7 +40,10 @@ body {
 
 .overlaydoa {
   position: absolute;
-  inset: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   background: url("../assets/whitedrapery.png") center/cover no-repeat;
 }
 
@@ -97,6 +100,11 @@ body {
   color: white;
   font-family: "Cormorant Garamond", serif;
   font-weight: bold;
+  background: -webkit-linear-gradient(
+    to right,
+    rgba(255, 140, 0, 0.5),
+    rgba(0, 0, 0, 0.2)
+  );
   background: linear-gradient(
     to right,
     rgba(255, 140, 0, 0.5),
