--- a/src/QR/qr.module.css
+++ b/src/QR/qr.module.css
@@ -34,7 +34,10 @@ body {
 
 .overlaydoa {
   position: absolute;
-  inset: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   background-color: rgba(0, 0, 0, 0.5);
 }
 
