--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,12 @@
   text-align: center;
 }
 
+#app-wrapper {
+  max-width: 1280px;
+  margin: 0 auto;
+  text-align: center;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
